@@ -652,6 +652,71 @@ EdcaTxopN::GotCts (double snr, WifiMode txMode)
   NS_LOG_DEBUG ("got cts");
 }
 
+uint8_t
+EdcaTxopN::GetCurrentTid ()
+{
+  NS_LOG_FUNCTION (this);
+  if (m_currentHdr.IsQosData ())
+    {
+      return m_currentHdr.GetQosTid ();
+    }
+  else if (m_currentHdr.IsBlockAckReq ())
+    {
+      CtrlBAckRequestHeader baReqHdr;
+      m_currentPacket->PeekHeader (baReqHdr);
+      return baReqHdr.GetTidInfo ();
+    }
+  else if (m_currentHdr.IsBlockAck ())
+    {
+      CtrlBAckResponseHeader baRespHdr;
+      m_currentPacket->PeekHeader (baRespHdr);
+      return baRespHdr.GetTidInfo ();
+    }
+  else if (m_currentHdr.IsMgt () && m_currentHdr.IsAction ())
+    {
+      Ptr<Packet> packet = m_currentPacket->Copy ();
+      WifiActionHeader actionHdr;
+      packet->RemoveHeader (actionHdr);
+
+      if (actionHdr.GetCategory () == WifiActionHeader::BLOCK_ACK)
+        {
+          switch (actionHdr.GetAction ().blockAck)
+            {
+            case WifiActionHeader::BLOCK_ACK_ADDBA_REQUEST:
+              {
+                MgtAddBaResponseHeader reqHdr;
+                packet->RemoveHeader (reqHdr);
+                return reqHdr.GetTid ();
+              }
+            case WifiActionHeader::BLOCK_ACK_ADDBA_RESPONSE:
+              {
+                MgtAddBaResponseHeader respHdr;
+                packet->RemoveHeader (respHdr);
+                return respHdr.GetTid ();
+              }
+            case WifiActionHeader::BLOCK_ACK_DELBA:
+              {
+                MgtDelBaHeader delHdr;
+                packet->RemoveHeader (delHdr);
+                return delHdr.GetTid ();
+              }
+            default:
+              {
+                NS_FATAL_ERROR ("Don't know how to extract Traffic ID from this BA action frame");
+              }
+            }
+        }
+      else
+        {
+          NS_FATAL_ERROR ("Don't know how to extract Traffic ID from this action frame");
+        }
+    }
+  else
+    {
+      NS_FATAL_ERROR ("Current packet has no Traffic ID");
+    }
+}
+
 void
 EdcaTxopN::MissedCts (void)
 {
@@ -669,21 +734,7 @@ EdcaTxopN::MissedCts (void)
       if (GetAmpduExist (m_currentHdr.GetAddr1 ()))
         {
           m_low->FlushAggregateQueue ();
-          uint8_t tid = 0;
-          if (m_currentHdr.IsQosData ())
-            {
-              tid = m_currentHdr.GetQosTid ();
-            }
-          else if (m_currentHdr.IsBlockAckReq ())
-            {
-              CtrlBAckRequestHeader baReqHdr;
-              m_currentPacket->PeekHeader (baReqHdr);
-              tid = baReqHdr.GetTidInfo ();
-            }
-          else
-            {
-              NS_FATAL_ERROR ("Current packet is not Qos Data nor BlockAckReq");
-            }
+          uint8_t tid = GetCurrentTid ();
 
           if (GetBaAgreementExists (m_currentHdr.GetAddr1 (), tid))
             {
@@ -829,15 +880,7 @@ EdcaTxopN::MissedAck (void)
         }
       if (GetAmpduExist (m_currentHdr.GetAddr1 ()))
         {
-          uint8_t tid = 0;
-          if (m_currentHdr.IsQosData ())
-            {
-              tid = m_currentHdr.GetQosTid ();
-            }
-          else
-            {
-              NS_FATAL_ERROR ("Current packet is not Qos Data");
-            }
+          uint8_t tid = GetCurrentTid ();
 
           if (GetBaAgreementExists (m_currentHdr.GetAddr1 (), tid))
             {
@@ -891,23 +934,7 @@ EdcaTxopN::MissedBlockAck (uint32_t nMpdus)
 {
   NS_LOG_FUNCTION (this);
   NS_LOG_DEBUG ("missed block ack");
-  uint8_t tid = 0;
-  if (m_currentHdr.IsQosData ())
-    {
-      tid = m_currentHdr.GetQosTid ();
-    }
-  else if (m_currentHdr.IsBlockAckReq ())
-    {
-      CtrlBAckRequestHeader baReqHdr;
-      m_currentPacket->PeekHeader (baReqHdr);
-      tid = baReqHdr.GetTidInfo ();
-    }
-  else if (m_currentHdr.IsBlockAck ())
-    {
-      CtrlBAckResponseHeader baRespHdr;
-      m_currentPacket->PeekHeader (baRespHdr);
-      tid = baRespHdr.GetTidInfo ();
-    }
+  uint8_t tid = GetCurrentTid ();
   if (GetAmpduExist (m_currentHdr.GetAddr1 ()))
     {
       m_stationManager->ReportAmpduTxStatus (m_currentHdr.GetAddr1 (), tid, 0, nMpdus, 0, 0);
